--- a/theme/input/scss/_index.scss
+++ b/theme/input/scss/_index.scss
@@ -1,39 +1,34 @@
-.center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
+.splash-container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
 
-  .landing-heading{
-      font-size: 4rem;
-  }
+    @media screen and (min-width: $medium) {
+        font-size: 18px;
+    }
+}
 
-  .landing-subheading{
-      text-align: center;
-  }
+.page-content {
+    height: 100%;
+}
 
-  // Typing style
-.typing {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .7em solid greenyellow; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  //margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-      animation: 
-      typing 3.5s steps(40, end),
-      blink-caret .75s step-end infinite;
+.splash {
+    box-sizing: inherit;
+
+    h1 {
+        font-size: 3em;
+        line-height: 1;
+        letter-spacing: -0.03em;
+        margin: 0;
     }
 
-  // Animation
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: greenyellow; }
-  }
+    h2 {
+        font-size: 2.25em;
+        font-weight: 500;
+        line-height: 1.25;
+        max-width: 22em;
+        letter-spacing: -0.03em;
+    }
+}
