--- a/theme/input/scss/_social.scss
+++ b/theme/input/scss/_social.scss
@@ -1,9 +1,8 @@
 .social-icons {
     display: flex;
-    justify-content: center;
     list-style: none;
     padding: 0px;
-    margin-top: 3rem;
+    margin-top:1rem;
   }
   
   .social-icons__link {
